--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,6 @@
 # config/application.yml
 
-AWS_ACCESS_KEY: "Your-access-key"
-AWS_SECRET_KEY: "Your-secret-key"
-AWS_BUCKET:     "Your-bucket"
+AWS_ACCESS_KEY: AKIAJRR3ARFCAMURMIVQ
+AWS_SECRET_KEY: LTqBMQ1a2CUi/o4wZHCzdREzLujKAIBSX8N13QHC
+AWS_BUCKET:     flixtercharlie
 AWS_REGION:     "us-east-1"
