Processing Payments with Stripe

--- a/config/application.yml
+++ b/config/application.yml
@@ -4,3 +4,5 @@ AWS_ACCESS_KEY: AKIAJRR3ARFCAMURMIVQ
 AWS_SECRET_KEY: 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
 AWS_BUCKET:     flixtercharlie
 AWS_REGION:     "us-east-1"
+SECRET_KEY:     sk_test_dMAm4WARcmEis8fwTkZMqE85
+PUBLISHABLE_KEY: pk_test_lA5uBIzAl6ytP0x40EQaoPlS 
